# zzuli_qiansai_rk3588

./: CMakeLists.txt  README.md  ai_camera_app  libmali-hook.so.1.9.0  toolchain-aarch64.cmake
config/: app_config.json.example
scripts/: run.sh.example
src/: main.cpp
src/bridge/: shared_mem_bridge.cpp  shared_mem_bridge.h
src/common/: data_types.h
src/drm/: drm_display.cpp  drm_display.h
src/mainwindow/: mainwindow.cpp  mainwindow.h
